# gymticks

./: Cargo.toml  README.md  index.html
public/: index.css  manifest.webmanifest  service-worker.js
src/: color.rs  grade.rs  lib.rs  section.rs  util.rs
