[package]
name = "gymticks"
version = "0.2.0"
authors = ["Rob Parrett <robparrett@gmail.com>"]
edition = "2018"


[lib]
crate-type = ["cdylib"]

[dependencies]
seed = "^0.6.0"
wasm-bindgen = "^0.2.55"
serde = "^1.0.103"
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4", "wasm-bindgen"] }
indexmap = { version = "^1.3.0", features = ["serde-1"] }
enclose = "1.1.8"
chrono = "0.4"
itertools = "0.8"

[dependencies.web-sys]
version = "0.3.32"
features = [
    "HtmlInputElement",
]
