[package]
name = "gymticks"
version = "0.2.0"
authors = ["Rob Parrett <robparrett@gmail.com>"]
edition = "2018"


[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[dependencies]
seed = "^0.8.0"
serde = "^1.0.117"
serde_json = "1.0"
uuid = { version = "0.8.1", features = ["serde", "v4", "wasm-bindgen"] }
indexmap = { version = "^1.6.0", features = ["serde-1"] }
enclose = "1.1.8"
chrono = "0.4"
itertools = "0.9"

[dependencies.web-sys]
version = "0.3.32"
features = [
    "HtmlInputElement",
]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
